--- a/styles.css
+++ b/styles.css
@@ -356,6 +356,7 @@ body {
         margin-right: calc(-50vw + 50%);
         border-bottom-left-radius: 20%;
         border-top-right-radius: 20%;
+        margin-bottom: 3rem;
     }
     .about-text{
         margin-bottom: 2rem;
@@ -518,7 +519,7 @@ body {
     color: #22479D;
     text-align: center;
 }
-.seccion-service{
+.cards-services{
     display: flex;
     flex-direction: row;
     justify-content: center; /* Centra las cards horizontalmente */
@@ -531,18 +532,13 @@ body {
     perspective: 1000px;
     font-family: sans-serif;
   }
-
-/*.flip-card-front, .img1{
-    background-image: url("images/remodelacion.jpg");
-}*/
-  
-  .title {
-    font-size: 1.5em;
-    font-weight: 900;
-    text-align: center;
-    margin: 0;
+  .content-card{
+    color: #fff;
+    font-size: clamp(1rem, 2vw, 2rem);
+    margin: 0 1.5rem;
+    text-align: left;
   }
-  
+
   .flip-card-inner {
     position: relative;
     width: 100%;
@@ -569,11 +565,6 @@ body {
     /*border: 1px solid #0b2545;*/
     border-radius: 1rem;
   }
-  
-  /*.flip-card-front {
-    position: relative;
-}*/
-
 .flip-card-front .title {
     position: absolute;
     left: 0;
@@ -633,124 +624,7 @@ body {
     background-position: center;
     background-repeat: no-repeat;
 }
-/*.servicios-section {
-    margin: 3rem auto 2rem auto;
-    border-radius: 12px;
-    font-family: 'Arial', sans-serif;
-    text-align: center;
-}
 
-.servicios-title {
-    font-size: 2.5rem;
-    color: #22479D;
-    margin-bottom: 3rem;
-    font-weight: 700;
-}
-
-.servicios-grid {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    gap: 0.1rem;
-}
-
-.servicio {
-    display: flex;
-    flex-direction: column;
-    background: var(--blue-secondary);
-}
-
-.servicioA{
-    text-align: left;
-    float: right;
-}
-.servicioB{
-    text-align: left;
-    float: left;
-}
-
-.servicio-text {
-    display: flex;
-    align-items: center;
-    gap: 1rem;
-    padding: 1.8rem 1.5rem;
-}
-
-.servicio-icon {
-    width: 36px;
-    height: 36px;
-    margin-right: 1rem;
-    flex-shrink: 0;
-}
-
-.servicio-text h3 {
-    font-size: 1.6rem;
-    color:#ffffff;
-    margin-bottom: 1rem;
-    font-weight: 700;
-}
-
-.servicio-text p {
-    color: #fff;
-    font-size: clamp(0.8rem, 2vw, 1.3rem);
-    line-height: 1.6;
-}
-
-.servicio-img {
-    width: 100%;
-    height: 250px;
-    overflow: hidden;
-    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.5);
-}
-
-.servicio-img img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-}
-.text-info{
-    /*margin-bottom: 1rem;
-}*/
-
-/*@media (max-width: 900px) {
-    .servicios-grid {
-        grid-template-columns: 1fr;
-    }
-    
-    /*.servicio {
-        padding: 1.5rem;
-    }
-    
-    .servicio-img {
-        height: 200px;
-    }
-    .servicio-icon {
-        width: 28px;
-        height: 28px;
-        margin-right: 0.7rem;
-    }
-    .servicios-section {
-        padding: 2rem 1rem;
-    }
-    
-    .servicios-title {
-        font-size: 1.8rem;
-        margin-bottom: 2rem;
-    }
-    
-    .servicio-text h3 {
-        font-size: 1.2rem;
-    }
-    
-    .servicio-text p {
-        font-size: 1rem;
-    }
-    .servicio-icon {
-        width: 22px;
-        height: 22px;
-        margin-right: 0.5rem;
-    }
-
-}*/
 /* Sección Nuestro Objetivo */
 .objetivo-section {
     margin: 2rem auto 2rem auto;
