--- a/styles.css
+++ b/styles.css
@@ -23,6 +23,15 @@ body {
     --white: #FFFFFF;
     --black: #000000; 
 }
+
+/*.roboto-<uniquifier> {
+    font-family: "Roboto", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: <weight>;
+    font-style: normal;
+    font-variation-settings: "wdth" 100;
+  }*/
+
 /* Header styles */
 .header {
     background-color: var(--white);
@@ -296,7 +305,8 @@ body {
     align-items: center;
     justify-content: center;
     background: #fff;
-    font-family: 'Arial', sans-serif;
+    margin: 0.5rem;
+    
 }
 
 .about-text {
@@ -306,24 +316,27 @@ body {
     padding: clamp(0.5rem, 2vw, 1rem) clamp(1rem, 3vw, 2rem);
 }
 
-.about-text .title-who {
+.about-text, .about-title, .proyectos-title{
+    font-family: "Roboto", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 900;
     font-size: clamp(1.5rem, 5vw, 2.5rem);
-    margin-bottom: 2rem;
-    font-weight: 700;
-    color: #22479D;
+    /*margin-bottom: 0.6rem;*/
 }
 
 .about-subtitle {
     font-size: clamp(1rem, 2.5vw, 1.5rem);
     color: #444;
-    margin-bottom: 1rem;
-    font-weight: 500;
+    font-weight: 600;
 }
-
-.about-text p {
-    font-size: clamp(0.8rem, 2vw, 1.3rem);
+.about-title{
+    color:#004e98;
+}
+.about-us {
+    font-size: clamp(0.8rem, 2vw, 1rem);
     color: #000000;
     line-height: 1.6;
+    font-weight: 400;
 }
 
 .about-image {
@@ -335,15 +348,29 @@ body {
 
 .about-image img {
     width: 100%;
-    height: 400px;
-    border-top-left-radius: 100px;
-    border-bottom-left-radius: 100px;
+    height: 450px;
     background: #ccc;
     object-fit: cover;
     box-shadow: 0 15px 30px rgba(34, 71, 157, 0.4), 0 8px 20px rgba(34, 71, 157, 0.3);
+    border-radius: 5%;
 }
 
-@media (max-width: 900px) {
+/*Proyectos seccion*/
+.section-proyectos{
+    background-color: #ffb703;
+    align-items: center;
+    padding: 20%
+}
+.proyectos-text{
+    align-items: center;
+    text-align: center;
+    margin: 2rem 3rem;
+}
+.proyectos-title{
+    color:#ffffff;
+}
+
+@media (max-width: 1000px) {
     .about-minimal {
         flex-direction: column;
     }
@@ -354,17 +381,43 @@ body {
         border-radius: 0;
         margin-left: calc(-50vw + 50%);
         margin-right: calc(-50vw + 50%);
-        border-bottom-left-radius: 20%;
-        border-top-right-radius: 20%;
-        margin-bottom: 3rem;
+        /*margin-bottom: 3rem;*/
     }
     .about-text{
-        margin-bottom: 2rem;
+        margin-bottom: 1rem;
     }
 }
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 /* Sección Nuestro Orgullo */
-.orgullo-section {
+/*.orgullo-section {
     background: #fff;
     border-radius: 0;
     font-family: 'Arial', sans-serif;
@@ -510,7 +563,7 @@ body {
         min-height: 180px;
     }
 }
-
+*/
 /* Sección Servicios */
 .title-servicios{
     font-size: clamp(1.5rem, 5vw, 2.5rem);
@@ -625,6 +678,20 @@ body {
     background-repeat: no-repeat;
 }
 
+@media (max-width: 1000px) {
+    .seccion-services {
+        /*flex-direction: column;
+        align-items: center;*/
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        gap: 0.5rem;
+        justify-items: center;
+    }
+    .flip-card {
+        width: 200px;
+        height: 240px;
+    }
+}
 /* Sección Nuestro Objetivo */
 .objetivo-section {
     margin: 2rem auto 2rem auto;
@@ -1331,7 +1398,7 @@ body {
 
 
 /* Aplicar a títulos específicos */
-.about-text h2,
+/*.about-text h2,
 .servicios-title,
 .orgullo-title,
 .objetivo-title,
@@ -1341,7 +1408,7 @@ body {
     position: relative;
     display: inline-block;
     color: var(--blue-primary);
-}
+}*/
 
 .valores-chips-grid {
     display: flex;
@@ -1494,5 +1561,17 @@ body {
     justify-content: center;
     gap: 2rem;
     margin: 2rem 0;
+}
+
+@media (max-width: 1000px) {
+    .seccion-services {
+        flex-direction: column;
+        align-items: center;
+        gap: 1.5rem;
+    }
+    .flip-card {
+        width: 200px;
+        height: 240px;
+    }
 }
 
