--- a/styles.css
+++ b/styles.css
@@ -549,10 +549,10 @@ body {
 /*Seccion Servicios*/
 
 .section-servicios{
-    padding: 3rem 2rem;
+    padding: 6rem 2rem;
 }
 .servicios-title{
-    margin: 0 0 1.5rem 2rem;
+    margin: 2rem 0 3rem 2rem;
     color: #004e98;
 }
 .services-icon{
@@ -579,10 +579,15 @@ body {
 
 .misionvision-title{
     text-align: center;
-    padding: 4rem 0 0 0;
-    color: #ffffff;
+    padding: 2rem 0 2rem 0;
+    color: #444;
     font-size: clamp(1.5rem, 5vw, 2.5rem);
     font-weight: 900;
+    background-color: #ffe299;
+}
+
+p{
+    margin: 0 !important;
 }
 
 .container-mision{
@@ -659,6 +664,7 @@ body {
     flex: 1;
 }
 .bg-dark{
+    
     padding: 0 0 2rem 0; 
 }
 
@@ -703,407 +709,6 @@ body {
 }
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-/* Sección Nuestro Orgullo */
-/*.orgullo-section {
-    background: #fff;
-    border-radius: 0;
-    font-family: 'Arial', sans-serif;
-    text-align: center;
-    width: 100vw;
-    position: relative;
-    left: 50%;
-    right: 50%;
-    margin-left: -50vw;
-    margin-right: -50vw;
-}
-.orgullo-title {
-    font-size: 2.5rem;
-    color: #22479D;
-    margin-bottom: 1.0rem;
-    margin: 2rem 0 1.0rem 0;    
-    font-weight: 700;
-}
-.orgullo-intro {
-    color: #444;
-    font-size: 1.3rem;
-    margin-bottom: 2.5rem;
-}
-.orgullo-carousel {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    position: relative;
-    width: 100vw;
-    margin: 0;
-    padding: 0;
-}
-.orgullo-slides-wrapper {
-    width: 100vw;
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-}
-.orgullo-arrow {
-    background: #004482;
-    color: #fff;
-    border: none;
-    border-radius: 50%;
-    width: 50px;
-    height: 50px;
-    font-size: 2rem;
-    cursor: pointer;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    transition: background 0.2s;
-    z-index: 20;
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-}
-.orgullo-arrow:hover {
-    background: rgba(34, 39, 157, 1);
-}
-.orgullo-arrow.left {
-    left: 20px;
-}
-.orgullo-arrow.right {
-    right: 20px;
-}
-.orgullo-slide {
-    display: none;
-}
-.orgullo-slide.active {
-    display: block;
-}
-.orgullo-img-container {
-    position: relative;
-    width: 100vw;
-    background: #ccc;
-    border-radius: 0;
-    overflow: hidden;
-    min-height: 250px;
-    display: flex;
-    align-items: flex-end;
-    justify-content: center;
-}
-.orgullo-img-container img {
-    width: 100vw;
-    height: 80vw;
-    max-height: 100vh;
-    min-height: 300px;
-    object-fit: cover;
-}
-.orgullo-desc {
-    position: absolute;
-    left: 0;
-    bottom: 0;
-    width: 100%;
-    background: #13315c;
-    color: #fff;
-    padding: 2.5rem 0.5rem 2.0rem 2.5rem;
-    border-radius: 0;
-    text-align: left;
-    box-sizing: border-box;
-    border-top-right-radius: 100%;
-}
-.orgullo-desc h3 {
-    margin: 0 0 0.3rem 0;
-    font-size: 1.5rem;
-    font-weight: 700;
-}
-.orgullo-desc p {
-    margin: 0;
-    font-size: 1.3rem;
-    font-weight: 400;
-}
-@media (max-width: 900px) {
-    .orgullo-carousel {
-        width: 100vw;
-        position: relative;
-    }
-    .orgullo-arrow {
-        position: absolute;
-        top: 50%;
-        transform: translateY(-50%);
-        width: 40px;
-        height: 40px;
-        font-size: 1.5rem;
-    }
-    .orgullo-arrow.left {
-        left: 10px;
-    }
-    .orgullo-arrow.right {
-        right: 10px;
-    }
-    .orgullo-slide {
-        width: 100vw;
-    }
-    .orgullo-img-container {
-        width: 100vw;
-    }
-    .orgullo-img-container img {
-        width: 100vw;
-        height: 45vw;
-        min-height: 180px;
-    }
-}
-*/
-/* Sección Servicios */
-.title-servicios{
-    font-size: clamp(1.5rem, 5vw, 2.5rem);
-    margin-bottom: 2rem;
-    font-weight: 700;
-    color: #22479D;
-    text-align: center;
-}
-.cards-services{
-    display: flex;
-    flex-direction: row;
-    justify-content: center; /* Centra las cards horizontalmente */
-    gap: 2rem; /* Espacio entre las cards, puedes ajustar el valor */
-    /*margin: 2rem; /* Espacio arriba y abajo de la sección */
-}
-.flip-card {
-    width: 250px; /* Ajusta el ancho según tu diseño */
-    height: 300px;
-    perspective: 1000px;
-    font-family: sans-serif;
-  }
-  .content-card{
-    color: #fff;
-    font-size: clamp(1rem, 2vw, 2rem);
-    margin: 0 1.5rem;
-    text-align: left;
-  }
-
-  .flip-card-inner {
-    position: relative;
-    width: 100%;
-    height: 100%;
-    text-align: center;
-    transition: transform 0.8s;
-    transform-style: preserve-3d;
-  }
-  
-  .flip-card:hover .flip-card-inner {
-    transform: rotateY(180deg);
-  }
-  
-  .flip-card-front, .flip-card-back {
-    box-shadow: 0 8px 14px 0 rgba(0,0,0,0.2);
-    position: absolute;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    width: 100%;
-    height: 100%;
-    -webkit-backface-visibility: hidden;
-    backface-visibility: hidden;
-    /*border: 1px solid #0b2545;*/
-    border-radius: 1rem;
-  }
-.flip-card-front .title {
-    position: absolute;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    margin: 0;
-    padding: 0.7em;
-    background: linear-gradient(to bottom, rgba(0,0,0,0.0) 0%, rgba(0,0,0,0.85) 100%);
-    color: #fff;
-    font-size: 1.2rem;
-    font-weight: 700;
-    text-align: center;
-    border-bottom-left-radius: 1rem;
-    border-bottom-right-radius: 1rem;
-    z-index: 2;
-}
-
-.flip-card-front p:not(.title) {
-    /* Para que el texto normal no se superponga al título */
-    margin-bottom: 2.5em;
-}
-  
-  .flip-card-front {
-    background-image: url("images/planificacion.png");
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    z-index: 2;
-}
-  
-  .flip-card-back {
-    background-color: #13315c;
-    transform: rotateY(180deg);
-    z-index: 1;
-  }
-.flip-card-front.img1 {
-    background-image: url("images/planificacion.png");
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-}
-.flip-card-front.img2 {
-    background-image: url("images/diseño.jpg");
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-}
-.flip-card-front.img3 {
-    background-image: url("images/construccion.jpg");
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-}
-.flip-card-front.img4 {
-    background-image: url("images/remodelacion.jpg");
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-}
-
-@media (max-width: 1000px) {
-    .seccion-services {
-        /*flex-direction: column;
-        align-items: center;*/
-        display: grid;
-        grid-template-columns: repeat(2, 1fr);
-        gap: 0.5rem;
-        justify-items: center;
-    }
-    .flip-card {
-        width: 200px;
-        height: 240px;
-    }
-}
-/* Sección Nuestro Objetivo */
-.objetivo-section {
-    margin: 2rem auto 2rem auto;
-    background: #ffffff;
-    border-radius: 12px;
-    font-family: 'Arial', sans-serif;
-    text-align: center;
-}
-.objetivo-title {
-    font-size: 2.5rem;
-    color: #22479D;
-    margin: 2rem 0 2.5rem 0;
-    font-weight: 700;
-}
-.objetivo-container {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 2.5rem;
-    position: relative;
-}
-.objetivo-box {
-    border-radius: 10px;
-    padding: 3rem 2.2rem;
-    margin: 0 2rem;
-    min-width: 220px;
-    max-width: 320px;
-    text-align: center;
-}
-.objetivo-box h3{
-    color: var(--blue-third);
-    font-size: 1.5rem;
-    margin-bottom: 0.7rem;
-    font-weight: 700;
-    text-align: center;
-}
-.valores{
-    color: var(--blue-third);
-    font-size: 1.5rem;
-    margin-bottom: 2rem;
-    font-weight: 700;
-    text-align: center;
-
-}
-.objetivo-box p {
-    color: #222;
-    font-size: 1.3rem;
-    margin: 0;
-    line-height: 1.6 ;
-}
-.objetivo-center {
-    position: relative;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    min-width: 180px;
-    min-height: 180px;
-}
-.objetivo-img {
-    width: 170px;
-    height: 170px;
-    border-radius: 50%;
-    object-fit: cover;
-    border: 5px solid #22479D;
-    background: #ccc;
-    z-index: 1;
-}
-.objetivo-arrow {
-    position: absolute;
-    pointer-events: none;
-}
-.vision-arrow {
-    left: -120px;
-    top: 40px;
-}
-.mision-arrow {
-    right: -120px;
-    top: 40px;
-}
-.mision, .vision{
-    background-color: var(--blue-light);
-}
-
-@media (max-width: 900px) {
-    .objetivo-container {
-        flex-direction: column;
-        gap: 2rem;
-    }
-    .objetivo-center {
-        min-width: 120px;
-        min-height: 120px;
-    }
-    .objetivo-img {
-        width: 110px;
-        height: 110px;
-    }
-    .vision-arrow, .mision-arrow {
-        position: static;
-        margin: 0 auto;
-        display: block;
-    }
-}
 
 /* Sección Nuestros Valores */
 .valores-section {
